# llm_messaging_apps

./: README.md  pyproject.toml  requirements.txt
llm_ma_bots/: telegram_bot.py  whatsapp_bot.py  whatsapp_itor_bot.py
